# CodeHephaestus

./: .env.example  .gitignore  README.md  pyproject.toml  solomon.yaml.example
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
cmd/: main.go
internal/claude/: prompts.go
internal/config/: config.go  config_test.go  yaml.go
internal/db/: migrations.go  state.go  state_test.go
internal/figma/: parser_test.go
internal/git/: worktree.go
internal/github/: client.go  client_test.go
internal/guardrails/: jailbreak.go
internal/loop/: loop.go  priorities.go
internal/planning/: planner.go  planner_test.go
internal/plugin/: plugin.go  settings.go
internal/slack/: client.go  notifier.go  standup.go
internal/statemachine/: handlers.go  states.go  states_test.go
internal/team/: prompt.go  prompt_test.go
internal/tracker/: jira.go  jira_test.go  models.go  models_test.go  tracker.go
internal/worker/: claude.go
plugins/changelog/: generator.go  output.go  plugin.go
plugins/developer/: handlers.go  planning.go  planning_test.go  plugin.go
prompts/: address_changes.md.j2  answer_comments.md.j2  answer_question.md.j2  build_feature.md.j2  changelog_pr.md.tmpl  changelog_slack.md.tmpl  classify_comment.md.tmpl  classify_question.md.tmpl  fix_ci.md.j2  jailbreak_scan.md.tmpl  planning_followup.md.tmpl  planning_initial.md.tmpl  planning_technical_followup.md.tmpl  planning_technical_initial.md.tmpl  prd_generate.md.j2  prd_to_json.md.j2  ralph_iteration.md.j2  standup.md.tmpl
src/codehephaestus/: __main__.py  (+6 more)
(+18 files in other folders)
