[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codehephaestus"
version = "0.1.0"
description = "Autonomous task runner: picks up Jira issues, implements them with AI, creates PRs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
]

[project.scripts]
codehephaestus = "codehephaestus.cli:main"
